--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,5 +1,6 @@
 driver:
   name: vagrant
+  provider: parallels
   server_name_prefix: "chef_pleroma"
   network:
     #- ["forwarded_port", {guest: 4000, host: 4000}]
